[project]
name = "blockchain-bondarevskyi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.135.1",
    "httpx>=0.28.1",
    "pydantic>=2.12.5",
    "requests>=2.33.1",
    "ruff>=0.15.5",
    "ty>=0.0.24",
    "uvicorn>=0.41.0",
]


[tool.ruff]
line-length = 79

[tool.ruff.lint]
select = [
    "B", "C", "E", "F", "W",
    "B9", "ANN", "Q0", "N8"
]
ignore = ["N807", "F401", "F405", "ANN204", "ANN401"]

[tool.ruff.lint.per-file-ignores]
"**/{tests}/*" = ["ANN"]

[tool.ruff.format]
docstring-code-format = true
